--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Weiliang Qi (綦伟良)"
   pronouns         : # example: "she/her"  
-  bio              : "Ph.D. Student in Computer Science the University of Texas at Dallas"
+  bio              : "Ph.D. Student in Computer Science \n The University of Texas at Dallas"
   location         : "Richardson, Texas"
   employer         : "the University of Texas at Dallas"
   uri              : # URL
